fix font-size on mobile devices

--- a/src/components/RightBar/index.sass
+++ b/src/components/RightBar/index.sass
@@ -29,6 +29,8 @@
       transition: .5s
       &:hover
         color: #ef4747
+        @media screen and (max-width : 500px)
+          font-size: 14px
     &_header
       margin-bottom: 10px
     &_date, &_views, &_read
